refactor: change Video services and endpoints to work properly